--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <head class="head">
+  <header class="head">
     <nav class="nav">
       <center><h1 id="mtech">M-Tech</h1></center>
+      <a href="Images\MTechHeader.jpeg"></a>
       <ul class="class1"><a  href="index.html">Home</a></ul>
       <ul class="class1"><a  href="about.html">About</a></ul>
       <ul class="class1"><a  href="contact.html">Contact</a></ul>
     </nav>
-  </head>
+  </header>
   <main>
     <div class="mission">
     <center><h1>Our Mission</h1>
