--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header class="head">
+  <header class="">
+
     <nav class="nav">
-      <center><h1 id="mtech">M-Tech</h1></center>
-      <a href="Images\MTechHeader.jpeg"></a>
-      <ul class="class1"><a  href="index.html">Home</a></ul>
-      <ul class="class1"><a  href="about.html">About</a></ul>
-      <ul class="class1"><a  href="contact.html">Contact</a></ul>
+     <ul class="home"><a  href="index.html">Home</a></ul>
+      <ul class="about"><a  href="about.html">About</a></ul>
+      <ul class="contact"><a  href="contact.html">Contact</a></ul>
     </nav>
+    <h1><img id="pcs" src="Images\PCs.jpeg" alt="computers">M-Tech</h1>
+    <div class="item1"></div>
   </header>
   <main>
     <div class="mission">
