--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
   
 </body>
 <footer class="footer">
+  <ul class="icons">
+  <li><a class="facebookIcon" href="#"></a></li>
+  <li><a class="linkedInIcon" href="#"></a></li>
+  <li><a class="email" href="#"></a></li>
+</ul>
   <p>Copyright &copy; 2021 mtech.com</p>
 </footer>
 </html>
