--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 </body>
 <footer class="footer">
   <ul class="icons">
-  <li><a class="facebookIcon" href="#"></a></li>
-  <li><a class="linkedInIcon" href="#"></a></li>
+  <li><a class="facebookIcon" href="facebook.com"></a></li>
+  <li><a class="linkedInIcon" href="linkedin.com"></a></li>
   <li><a class="email" href="#"></a></li>
 </ul>
   <p>Copyright &copy; 2021 mtech.com</p>
