--- a/index.html
+++ b/index.html
@@ -11,14 +11,18 @@
   <header class="">
 
     <nav class="nav">
-     <ul class="home"><a  href="index.html">Home</a></ul>
-      <ul class="about"><a  href="about.html">About</a></ul>
-      <ul class="contact"><a  href="contact.html">Contact</a></ul>
+     <ul class="home"><a class="home" href="index.html">Home</a></ul>
+      <ul class="about"><a class="about" href="about.html">About</a></ul>
+      <ul class="contact"><a class="contact" href="contact.html">Contact</a></ul>
     </nav>
-    <h1><img id="pcs" src="Images\PCs.jpeg" alt="computers">M-Tech</h1>
-    <div class="item1"></div>
+    <h1><img id="pcs" src="Images\PCs.jpeg" alt="computers"></h1>
+
   </header>
   <main>
+
+    <div class="item1">
+      <p id="ourservices">Our Services</p>  
+    </div>
     <div class="mission">
     <center><h1>Our Mission</h1>
     <p>We're here to get your PC issues resolved.</p>
