--- a/index.html
+++ b/index.html
@@ -6,37 +6,79 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Welcome</title>
   <link rel="stylesheet" href="style.css">
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-  <header class="">
-
-    <nav class="nav">
-     <ul class="home"><a class="home" href="index.html">Home</a></ul>
+  
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://www.nerdapp.com/Nerd?token=0ad2dd45-7fc2-41e0-8747-1037dad902bb">NerdApp</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Pricing</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Dropdown link
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <!-- <nav class="nav">
+    <ul class="home"><a class="home" href="index.html">Home</a></ul>
       <ul class="about"><a class="about" href="about.html">About</a></ul>
       <ul class="contact"><a class="contact" href="contact.html">Contact</a></ul>
     </nav>
-    <h1><img id="pcs" src="Images\PCs.jpeg" alt="computers"></h1>
+    <h1><img id="pcs" src="Images\PCs.jpeg" alt="computers"></h1> -->
 
   </header>
   <main>
 
-    <div class="item1">
+    <!-- <div class="item1">
       <p id="ourservices">Our Services</p>  
     </div>
     <div class="mission">
     <center><h1>Our Mission</h1>
     <p>We're here to get your PC issues resolved.</p>
     <p>No fix, no pay. Guaranteed.</p></center>
-    </div>
+    </div> -->
   </main>
+  <footer class="footer">
+    <ul class="icons">
+    <li><a class="facebookIcon" href="facebook.com"></a></li>
+    <li><a class="linkedInIcon" href="linkedin.com"></a></li>
+    <li><a class="email" href="#"></a></li>
+  </ul>
+    <p>Copyright &copy; 2021 mtech.com</p>
+  </footer>
+    <!-- Optional JavaScript; choose one of the two! -->
+
+  <!-- Option 1: Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+  <!-- Option 2: Separate Popper and Bootstrap JS -->
   
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+ 
+  <script src="script.js"></script>
 </body>
-<footer class="footer">
-  <ul class="icons">
-  <li><a class="facebookIcon" href="facebook.com"></a></li>
-  <li><a class="linkedInIcon" href="linkedin.com"></a></li>
-  <li><a class="email" href="#"></a></li>
-</ul>
-  <p>Copyright &copy; 2021 mtech.com</p>
-</footer>
+
 </html>
