--- a/index.html
+++ b/index.html
@@ -60,14 +60,7 @@
     <p>No fix, no pay. Guaranteed.</p></center>
     </div> -->
   </main>
-  <footer class="footer">
-    <ul class="icons">
-    <li><a class="facebookIcon" href="facebook.com"></a></li>
-    <li><a class="linkedInIcon" href="linkedin.com"></a></li>
-    <li><a class="email" href="#"></a></li>
-  </ul>
-    <p>Copyright &copy; 2021 mtech.com</p>
-  </footer>
+<img src="Images/PCs.jpeg" alt="Three Alternating Images of various computers.">
     <!-- Optional JavaScript; choose one of the two! -->
 
   <!-- Option 1: Bootstrap Bundle with Popper -->
@@ -79,6 +72,50 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
  
   <script src="script.js"></script>
+  <footer id="the-footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <i class="fas fa-coffee footericon"></i> <br><br><br>
+        </div>
+        <div class="col-md-2">
+          <h6>Product</h6>
+          <ul class="list-unstyled">
+            <li><a href="#">News</a></li>
+            <li><a href="#">Content</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Photos</a></li>
+          </ul>
+        </div>
+        <div class="col-md-2">
+          <h6>Help</h6>
+          <ul class="list-unstyled">
+            <!-- I looked up bootstrap how to get rid of underline text and applied solution below. However, I found using pure CSS to be more efficient and less tedious. Applying text-decoration-none to ul tag had no effect.-->
+            <li><a class="text-decoration-none" href="#">Help Center</a></li>
+            <li><a class="text-decoration-none" href="#">Privacy Basics</a></li>
+            <li><a class="text-decoration-none" href="#">User Agreement</a></li>
+            <li><a class="text-decoration-none" href="#">Content Policy</a></li>
+          </ul>
+        </div>
+        <div class="col-md-2">
+          <h6>Menu</h6>
+          <ul class="list-unstyled">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <footer class="footer">
+    <!-- <ul class="icons">
+    <li><a class="facebookIcon" href="facebook.com"></a></li>
+    <li><a class="linkedInIcon" href="linkedin.com"></a></li>
+    <li><a class="email" href="#"></a></li>
+  </ul>
+    <p>Copyright &copy; 2021 mtech.com</p> -->
+  </footer>
 </body>
 
 </html>
