--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
   
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <!-- <a class="navbar-brand" href="#">Navbar</a> -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#">Home <span class="sr-only"></span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://www.nerdapp.com/Nerd?token=0ad2dd45-7fc2-41e0-8747-1037dad902bb">NerdApp</a>
+            <a class="nav-link" id="nerdApp" href="https://www.nerdapp.com/Nerd?token=0ad2dd45-7fc2-41e0-8747-1037dad902bb">NerdApp</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Pricing</a>
